--- a/frontend/src/styles/SignupPage.css
+++ b/frontend/src/styles/SignupPage.css
@@ -20,10 +20,12 @@ h2 {
     flex-direction: column;
     width: 100%;
     max-width: 350px; /* prevents form from stretching too much */
+    gap: 8px;
 }
 
+
 .signup-form input {
-    padding: 10px;
+    padding: 8px;
     font-size: 16px;
     border-radius: 5px;
     border: 1px solid #ccc;
@@ -31,7 +33,7 @@ h2 {
     box-sizing: border-box;
 }
 
-button {
+.btn {
     padding: 10px;
     font-size: 16px;
     border-radius: 5px;
@@ -41,7 +43,7 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+.btn:hover {
     background-color: #5a4f4f;
 }
 
